@@ -61,6 +61,8 @@
 #include <stdlib.h>
 #include <string.h>
 
+#include "openssl/e_os.h"
+
 #ifdef VMS
 #include <unixio.h>
 #endif
@@ -73,7 +75,6 @@
 # include <sys/stat.h>
 #endif
 
-#include "openssl/e_os.h"
 #include <openssl/crypto.h>
 #include <openssl/rand.h>
 
